# Raspberrypi_projs

./: .gitignore  README.md
socket/tcp/client/: client.cpp
socket/tcp/server/: server.cpp
socket/udp/client/: CMakeLists.txt  client.cpp
socket/udp/server/: CMakeLists.txt  server.cpp
video_stream/: CMakeLists.txt  README.md
video_stream/src/: receiver.cpp  sender.cpp
video_stream/src/protocols/: basic_protocol.cpp  basic_protocol.hpp  protocol.hpp
video_stream/src/receiver/: receiver_socket.cpp  receiver_socket.hpp
video_stream/src/sender/: sender_socket.cpp  sender_socket.hpp
video_stream/src/video/: video_capture.cpp  video_capture.hpp  video_frame.cpp  video_frame.hpp
